syntax = "proto3";
package server;

option go_package = "./;server";

message GetOrgTokenRequest {
  int64 org_id = 1;
}

message GetOrgTokenResponse {
  string token = 1;
}

message PublishStreamRequest {
  string channel = 1;
  bytes data = 2;
}

message PublishStreamResponse {}

service Grafana {
  rpc GetOrgToken(GetOrgTokenRequest) returns (GetOrgTokenResponse);
  rpc PublishStream(PublishStreamRequest) returns (PublishStreamResponse);
}
